welcome.lessons.welcome.array.array667.Array667.scala.error
array667:11: error: type mismatch;
 found   : (Int, Int)
 required: Int
    return (six , ss)
           ^array667:4: error: type mismatch;
 found   : Unit
 required: Int
  for(i<- 1 to nums.length-1) {
       ^